samples/_failures_safe/1761390914_12ec5b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ca88507.c: In function ‘main’:
./samples/SAFE/__tmp_7ca88507.c:127:33: error: expected ‘;’ at end of input
  127 |     if (a.data == NULL) { printf
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_7ca88507.c:127:5: error: expected declaration or statement at end of input
  127 |     if (a.data == NULL) { printf
      |     ^~
./samples/SAFE/__tmp_7ca88507.c:127:5: error: expected declaration or statement at end of input
